--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.kotlin_version = "1.6.21"
+    dependencies {
+//        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath 'com.huawei.agconnect:agcp:1.4.2.301'
+
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
