--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
         debug {
             debuggable true
             versionNameSuffix "-DEBUG"
-            applicationIdSuffix ".debug"
-            resValue "string", "app_name_build", "[Debug] BarScannerDemo"
+            applicationIdSuffix ".debug.mlkit"
+            resValue "string", "app_name_build", "[Debug.MLKit] BarScannerDemo"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
         }
@@ -40,7 +40,7 @@ android {
             signingConfig signingConfigs.release
             debuggable false
             minifyEnabled true
-            resValue "string", "app_name_build", "BarScannerDemo"
+            resValue "string", "app_name_build", "Mlkit BarScannerDemo"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
