--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,20 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
-
+apply plugin: 'kotlin-android-extensions'
 android {
     namespace 'com.rogergcc.barcodescannerdemo'
-    compileSdk 33
+    compileSdk 28
 
     defaultConfig {
         applicationId "com.rogergcc.barcodescannerdemo"
-        minSdk 21
-        targetSdk 33
+        minSdk 19
+        targetSdk 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -30,8 +32,8 @@ android {
         debug {
             debuggable true
             versionNameSuffix "-DEBUG"
-            applicationIdSuffix ".debug.mlkit"
-            resValue "string", "app_name_build", "[Debug.MLKit] BarScannerDemo"
+            applicationIdSuffix ".debug.mlkitsolmobile"
+            resValue "string", "app_name_build", "Debug.MLKit BarcodeScanSolMobile"
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
         }
@@ -59,30 +61,35 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
+//    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+//    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0'
+//    androidx.navigation:navigation-fragment-ktx:2.3.5
 
     // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
 
     // Use this dependency to bundle the model with your app
     implementation 'com.google.mlkit:barcode-scanning:17.0.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
-    var camerax_version = "1.0.2"
-    // CameraX library
-    implementation("androidx.camera:camera-camera2:${camerax_version}")
-    // If you want to additionally use the CameraX Lifecycle library
-    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
-    // If you want to additionally use the CameraX View class
-    implementation("androidx.camera:camera-view:1.0.0-alpha30")
+//    var camerax_version = "1.0.0"
+//    // CameraX library
+////    implementation("androidx.camera:camera-camera2:1.0.0-alpha01")
+//    // If you want to additionally use the CameraX Lifecycle library
+//    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
+//    // If you want to additionally use the CameraX View class
+//    implementation("androidx.camera:camera-view:1.0.0-alpha01")
+
 
     // permissions
-    implementation 'com.afollestad.assent:core:3.0.2'
+//    implementation 'com.afollestad.assent:core:3.0.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
