--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
         multiDexEnabled true
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
     signingConfigs {
 
         release {
@@ -88,8 +93,7 @@ dependencies {
 //    implementation("androidx.camera:camera-view:1.0.0-alpha01")
 
 
-    // permissions
-//    implementation 'com.afollestad.assent:core:3.0.2'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
