--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
 
     // Use this dependency to bundle the model with your app
-    implementation 'com.google.mlkit:barcode-scanning:17.0.0'
+    implementation 'com.google.mlkit:barcode-scanning:16.0.2'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
 //    var camerax_version = "1.0.0"
@@ -91,7 +91,11 @@ dependencies {
 //    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
 //    // If you want to additionally use the CameraX View class
 //    implementation("androidx.camera:camera-view:1.0.0-alpha01")
-
+//    implementation "androidx.activity:activity:1.6.0-alpha05"
+//    implementation "androidx.legacy:legacy-support-v13:1.0.0"
+//
+//    implementation "androidx.activity:activity-ktx:1.2.0.alpha04"
+//    implementation "androidx.fragment:fragment-ktx:1.3.0-alpha04"
 
 
 
